--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "ngtystr.ppm-pgm-viewer-for-vscode"
+        "ngtystr.ppm-pgm-viewer-for-vscode",
+        "ms-vscode.live-server"
     ]
 }
